--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,13 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/image",
+              "src/assets/image/card-page",
+              "src/assets/image/Cards-list",
+              "src/assets/image/payment",
+              "src/assets/image/social",
+              "src/assets/image/stroe-basket"
             ],
             "styles": [
               "src/styles.scss"
